Some interesting addings

--- a/index.html
+++ b/index.html
@@ -36,33 +36,46 @@
     </div>
 </nav>
 <main style="flex: 1 0 auto;">
-    <section id="main" class="py-5 mb-5">
+    <section id="main" class="py-5">
         <div class="container text-center">
-            <h2 style="font-size: 34pt;">Новый способ управления</h2>
+            <h2 class="big-header">Новый способ управления</h2>
             <h6 class="text-secondary mb-5">Мультифункциональная система управления образовательной организацией</h6>
-            <div class="w-100 px-4 mb-5"><img src="images/nwlogo_white.svg" alt="" class="img-fluid"></div>
-            <a href="#services" class="btn design-button-2 py-2 px-3" style="font-size: 16pt;">Узнайте как использовать</a>
+            <a href="#services" class="btn design-button-2 py-2 px-3 mb-5" style="font-size: 16pt;">Узнайте как использовать</a>
+            <div class="w-100 px-4"><img src="images/nwlogo_white.svg" alt="" class="img-fluid"><img src="images/presentation.png"
+                                                                                                          alt="" class="img-fluid"></div>
         </div>
     </section>
     <section id="services" class="my-5 py-5">
-        <div class="container">
+        <h2 class="text-center big-header mb-5">Наши сервисы</h2>
+        <div class="container pb-4 mb-4 light-border">
             <div class="row">
-                <div class="col-md-3 text-right">
-                    <img src="images/nwservices.png" class="img-fluid" alt="">
+                <div class="col-md-5 text-right">
+                    <img src="images/presentation.png" class="img-fluid" alt="">
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-7">
                     <span class="block-heading-left">NeoWave Services</span>
                     <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus asperiores assumenda consequatur delectus doloremque eaque esse ex hic ipsam, minima mollitia nisi possimus provident quidem quisquam reprehenderit similique tempora!</p>
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div class="container pb-4 mb-4 light-border">
             <div class="row">
-                <div class="col-md-3 text-right">
-                    <img src="images/nwservices.png" class="img-fluid" alt="">
+                <div class="col-md-7 text-right">
+                    <span class="block-heading-right">NeoWave IT-Wallet</span>
+                    <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus asperiores assumenda consequatur delectus doloremque eaque esse ex hic ipsam, minima mollitia nisi possimus provident quidem quisquam reprehenderit similique tempora!</p>
                 </div>
-                <div class="col-md-9">
-                    <span class="block-heading-left">NeoWave Services</span>
+                <div class="col-md-5 text-left">
+                    <img src="images/nwapp.png" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="container pb-4 mb-4 light-border">
+            <div class="row">
+                <div class="col-md-5 text-right">
+                    <img src="images/nwbt.png" class="img-fluid" alt="">
+                </div>
+                <div class="col-md-7">
+                    <span class="block-heading-left">NeoWave Bug-tracker</span>
                     <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus asperiores assumenda consequatur delectus doloremque eaque esse ex hic ipsam, minima mollitia nisi possimus provident quidem quisquam reprehenderit similique tempora!</p>
                 </div>
             </div>
