Site design complete

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body class="bg-dark text-light h-100 d-flex flex-column">
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm sticky-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
     <div class="container">
         <a class="navbar-brand" href="#"><img src="images/nwlogo_white.svg" height="30" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -26,66 +26,120 @@
                     <a class="nav-link" href="#services">Сервисы</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#partners">Партнёры</a>
+                    <a class="nav-link" href="#team">Команда</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#team">Команда</a>
+                    <a class="nav-link" href="#partners">Партнёры</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
-<main style="flex: 1 0 auto;">
+<main style="flex: 1 0 auto; margin-top: 50px;">
     <section id="main" class="py-5">
         <div class="container text-center">
             <h2 class="big-header">Новый способ управления</h2>
             <h6 class="text-secondary mb-5">Мультифункциональная система управления образовательной организацией</h6>
-            <a href="#services" class="btn design-button-2 py-2 px-3 mb-5" style="font-size: 16pt;">Узнайте как использовать</a>
-            <div class="w-100 px-4"><img src="images/nwlogo_white.svg" alt="" class="img-fluid"><img src="images/presentation.png"
-                                                                                                          alt="" class="img-fluid"></div>
+            <a href="#services" class="btn design-button-2 py-2 px-3 mb-5" style="font-size: 16pt;">Узнайте как
+                использовать</a>
+            <div class="w-100 px-4"><img src="images/nwlogo_white.svg" alt="" class="img-fluid"><img
+                    src="images/presentation.png"
+                    alt="" class="img-fluid"></div>
         </div>
     </section>
     <section id="services" class="my-5 py-5">
         <h2 class="text-center big-header mb-5">Наши сервисы</h2>
-        <div class="container pb-4 mb-4 light-border">
+        <div class="container pt-4 mb-4 light-border">
             <div class="row">
                 <div class="col-md-5 text-right">
                     <img src="images/presentation.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-md-7">
-                    <span class="block-heading-left">NeoWave Services</span>
-                    <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus asperiores assumenda consequatur delectus doloremque eaque esse ex hic ipsam, minima mollitia nisi possimus provident quidem quisquam reprehenderit similique tempora!</p>
+                    <img src="images/serviceslogo.svg" height="60" alt="">
+                    <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus asperiores
+                        assumenda consequatur delectus doloremque eaque esse ex hic ipsam, minima mollitia nisi possimus
+                        provident quidem quisquam reprehenderit similique tempora!</p>
                 </div>
             </div>
         </div>
-        <div class="container pb-4 mb-4 light-border">
+        <div class="container pt-4 mb-4 light-border">
             <div class="row">
                 <div class="col-md-7 text-right">
-                    <span class="block-heading-right">NeoWave IT-Wallet</span>
-                    <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus asperiores assumenda consequatur delectus doloremque eaque esse ex hic ipsam, minima mollitia nisi possimus provident quidem quisquam reprehenderit similique tempora!</p>
+                    <img src="images/itwlogo.svg" height="60" alt="">
+                    <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus asperiores
+                        assumenda consequatur delectus doloremque eaque esse ex hic ipsam, minima mollitia nisi possimus
+                        provident quidem quisquam reprehenderit similique tempora!</p>
                 </div>
                 <div class="col-md-5 text-left">
                     <img src="images/nwapp.png" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
-        <div class="container pb-4 mb-4 light-border">
+        <div class="container pt-4 mb-4 light-border">
             <div class="row">
                 <div class="col-md-5 text-right">
                     <img src="images/nwbt.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-md-7">
-                    <span class="block-heading-left">NeoWave Bug-tracker</span>
-                    <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus asperiores assumenda consequatur delectus doloremque eaque esse ex hic ipsam, minima mollitia nisi possimus provident quidem quisquam reprehenderit similique tempora!</p>
+                    <img src="images/btlogo.svg" height="60" alt="">
+                    <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus asperiores
+                        assumenda consequatur delectus doloremque eaque esse ex hic ipsam, minima mollitia nisi possimus
+                        provident quidem quisquam reprehenderit similique tempora!</p>
+                </div>
+            </div>
+        </div>
+        <div class="container pt-4">
+            <div class="row">
+                <div class="col-md-7 text-right">
+                    <img src="images/ttlogo.svg" height="60" alt="">
+                    <p class="my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus asperiores
+                        assumenda consequatur delectus doloremque eaque esse ex hic ipsam, minima mollitia nisi possimus
+                        provident quidem quisquam reprehenderit similique tempora!</p>
+                </div>
+                <div class="col-md-5 text-left">
+                    <img src="images/nwapp.png" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
     </section>
-    <section id="partners">
-
+    <section id="team" class="my-5 py-5">
+        <h2 class="text-center big-header mb-5">Наша команда</h2>
+        <div class="container d-flex align-items-center justify-content-center">
+            <div class="card text-white bg-dark mb-3 mr-3" style="max-width: 18rem;">
+                <img src="images/ivpetrov.jpg" class="card-img-top" alt="">
+                <div class="card-body">
+                    <h5 class="card-title font-weight-bold">Иван Петров</h5>
+                    <p class="card-text">Разработчик</p>
+                </div>
+            </div>
+            <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
+                <img src="images/aigarifullin.jpg" class="card-img-top" alt="">
+                <div class="card-body">
+                    <h5 class="card-title font-weight-bold">Артур Гарифуллин</h5>
+                    <p class="card-text">Менеджер проекта</p>
+                </div>
+            </div>
+        </div>
+        <div class="container text-right"><a href="//vk.com/tekly"><img src="images/tekly_white.svg" height="80" alt=""></a></div>
     </section>
-    <section id="team">
-
+    <section id="partners">
+        <div class="row partner-list text-center bg-light py-5 px-3 m-0">
+            <div class="col-4 d-flex align-items-center justify-content-center col-md-2 mb-5 mb-md-0"><img
+                    class="img-fluid" src="images/partners/crpk.svg" alt=""></div>
+            <div class="col-4 d-flex align-items-center justify-content-center col-md-2 mb-5 mb-md-0"><img
+                    class="img-fluid" src="images/partners/itpark.svg" alt=""></div>
+            <div class="col-4 d-flex align-items-center justify-content-center col-md-2 mb-5 mb-md-0"><img
+                    class="img-fluid" src="images/partners/kfu.svg" alt=""></div>
+            <div class="col-4 d-flex align-items-center justify-content-center col-md-2 mb-md-0"><img class="img-fluid"
+                                                                                                      src="images/partners/rdsh.svg"
+                                                                                                      alt=""></div>
+            <div class="col-4 d-flex align-items-center justify-content-center col-md-2 mb-md-0"><img class="img-fluid"
+                                                                                                      src="images/partners/utalents.svg"
+                                                                                                      alt=""></div>
+            <div class="col-4 d-flex align-items-center justify-content-center col-md-2 mb-md-0"><img class="img-fluid"
+                                                                                                      src="images/partners/vk.svg"
+                                                                                                      alt=""></div>
+        </div>
     </section>
 </main>
 
