--- a/index.html
+++ b/index.html
@@ -108,19 +108,20 @@
             <div class="card text-white bg-dark mb-3 mr-3" style="max-width: 18rem;">
                 <img src="images/ivpetrov.jpg" class="card-img-top" alt="">
                 <div class="card-body">
-                    <h5 class="card-title font-weight-bold">Иван Петров</h5>
-                    <p class="card-text">Разработчик</p>
+                    <h5 class="card-title font-weight-bold"><a class="text-white" href="//vk.com/ipetrovofficial">Иван Петров</a></h5>
+                    <p class="card-text text-white-50">Разработчик</p>
                 </div>
             </div>
             <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
                 <img src="images/aigarifullin.jpg" class="card-img-top" alt="">
                 <div class="card-body">
-                    <h5 class="card-title font-weight-bold">Артур Гарифуллин</h5>
-                    <p class="card-text">Менеджер проекта</p>
+                    <h5 class="card-title font-weight-bold"><a class="text-white" href="//vk.com/cozyrozy">Артур Гарифуллин</a></h5>
+                    <p class="card-text text-white-50">Менеджер проекта</p>
                 </div>
             </div>
         </div>
-        <div class="container text-right"><a href="//vk.com/tekly"><img src="images/tekly_white.svg" height="80" alt=""></a></div>
+        <div class="container text-right"><a href="//vk.com/tekly"><img src="images/tekly_white.svg" height="80" alt=""></a>
+        </div>
     </section>
     <section id="partners">
         <div class="row partner-list text-center bg-light py-5 px-3 m-0">
