--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>NeoWave</title>
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
+
+    <script src="js/vendor.js"></script>
 </head>
 <body class="bg-dark text-light h-100 d-flex flex-column">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
@@ -104,12 +106,12 @@
     </section>
     <section id="team" class="my-5 py-5">
         <h2 class="text-center big-header mb-5">Наша команда</h2>
-        <div class="container d-flex align-items-center justify-content-center">
+        <div class="container d-flex align-items-stretch justify-content-center ">
             <div class="card text-white bg-dark mb-3 mr-3" style="max-width: 18rem;">
                 <img src="images/ivpetrov.jpg" class="card-img-top" alt="">
                 <div class="card-body">
                     <h5 class="card-title font-weight-bold"><a class="text-white" href="//vk.com/ipetrovofficial">Иван Петров</a></h5>
-                    <p class="card-text text-white-50">Разработчик</p>
+                    <p class="card-text text-white-50">Главный разработчик</p>
                 </div>
             </div>
             <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
@@ -152,6 +154,6 @@
         </small>
     </div>
 </footer>
-<script src="js/vendor.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
